# ffi_ios_static

./: LICENSE  README.md  ffigen.yaml  pubspec.yaml
example/: README.md  pubspec.yaml
example/ios/Runner/: AppDelegate.swift  Info.plist  Runner-Bridging-Header.h
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
ios/: ffi_ios_static.podspec
ios/Classes/: ffi_ios_static.c
ios/Frameworks/: .gitignore
lib/: ffi_ios_static.dart  ffi_ios_static_bindings_generated.dart
src/: .gitignore  CMakeLists.txt  build.sh  ffi_ios_static.c
